syntax = "proto3";

package auth;

service AuthService {
  rpc RegistrarUsuario (RegistrarUsuarioRequest) returns (AuthResponse);
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc Logout (LogoutRequest) returns (AuthResponse);
  rpc ActualizarPassword (ActualizarPasswordRequest) returns (AuthResponse);
}

message RegistrarUsuarioRequest {
  string correo = 1;
  string password = 2;
}

message LoginRequest {
  string correo = 1;
  string password = 2;
}

message LogoutRequest {
  string token = 1;
}

message ActualizarPasswordRequest {
  string id = 1;
  string passwordActual = 2;
  string nuevaPassword = 3;
  string confirmarPassword = 4;
  string token = 5;
}

message LoginResponse {
  string token = 1;
}

message AuthResponse {
  string message = 1;
}